apps/external/syncjoe/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: syncjoe
  namespace: default
spec:
  type: ExternalName
  externalName: 10.47.59.4
  ports:
    - name: http
      port: 8384
      targetPort: 8384
