apps/external/syncjoe/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncjoe
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`syncjoe.joejad.com`)
      kind: Rule
      services:
        - name: syncjoe
          port: 8384
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
